Made it so the language when turned on shows the correct recipes immediately.